add new fragment for html and css

--- a/index.html
+++ b/index.html
@@ -62,4 +62,178 @@
          </form>
       </div>
     </span>
+    
+    <button id="overlay_btn">Заполнить форму</button>
+
+    <div class="mobile-menu" style="position: fixed; z-index: 15; bottom: 0;"> 
+      <div class="click-menu-mobile" id="click-menu-mobile">
+        <div id="sup-drupal-mobile" class="poz-mobile" style="color:rgb(254, 59, 29)">
+          ПОДДЕРЖКА DRUPAL
+        </div>
+        <div id="Admin-mobile" class="poz-mobile">
+            АДМИНИСТРИРОВАНИЕ <img src="img/angle-small-down.svg" alt="angle-small-down" style="width: 15px;">
+        </div>
+        <div id="Admin-menu-mobile"> 
+          <div class="Admin-menu-mobile poz-mobile">МИГАРЦИЯ</div>
+          <div class="Admin-menu-mobile poz-mobile">БЭКАПЫ</div>
+          <div class="Admin-menu-mobile poz-mobile">АУДИТ БЕЗОПАСНОСТИ</div>
+          <div class="Admin-menu-mobile poz-mobile">ОТПИМИЗАЦИЯ СКОРОСТИ</div>
+          <div class="Admin-menu-mobile poz-mobile">ПЕРЕЕЗД НА HTTPS</div>
+        </div>
+        <div class="poz-mobile" id="Prodvig-mobile">
+            ПРОДВИЖЕНИЕ
+        </div>
+        <div class="poz-mobile" id="Advertise-mobile">
+            РЕКЛАМА
+        </div>
+        <div id="About-mobile" class="poz-mobile">
+            О НАС <img src="img/angle-small-down.svg" alt="angle-small-down" style="width: 15px">  
+        </div>
+        <div id="About-menu-mobile">
+          <div class="About-menu-mobile poz-mobile">КОМАНДА</div>
+          <div class="About-menu-mobile poz-mobile">DRUPALGIVE</div>
+          <div class="About-menu-mobile poz-mobile">БЛОГ</div>
+          <div class="About-menu-mobile poz-mobile">КУРСЫ DRUPAL</div>
+        </div>
+        <div id="Projects-mobile" class="poz-mobile">
+            ПРОЕКТЫ
+        </div>
+        <div id="Contacts-mobile" class="poz-mobile">
+            КОНТАКТЫ
+        </div>
+      </div>
+
+      <div style="height: 50px;">
+        <div style="width: 50%;float:left;max-height: 100%;height: 100%;display: flex;justify-content: center;">
+          <img src="img/drupal-coder.svg" alt="drupal" style="max-width: 100%;">
+        </div>
+        <div style="width: 50%;display: flex;justify-content: center;height: 100%;">
+            <img id="click-mob-menu" src="img/mobile-menu.svg" style="width:25px; margin-left: calc(100% - 50px);" alt="menu">
+        </div>
+      </div>
+    </div>
+
+    <header class="fullscreen-bg"> 
+		<div class="overlay">
+			<div class="menu">
+                <div id="Drupal">
+                    <img src="img/drupal-coder.svg" alt="drupal">
+                </div>
+                <div id="sup-drupal">
+                    ПОДДЕРЖКА DRUPAL
+                </div>
+                <div id="Admin" style="position: relative;">
+                    <span id="Admin-text">АДМИНИСТРИРОВАНИЕ</span> <img src="img/angle-small-down.svg" alt="angle-small-down" style="width: 15px;">
+                    <div id="Admin-menu" >
+                        <div class="Admin-menu">МИГАРЦИЯ</div>
+                        <div class="Admin-menu">БЭКАПЫ</div>
+                        <div class="Admin-menu">АУДИТ БЕЗОПАСНОСТИ</div>
+                        <div class="Admin-menu">ОТПИМИЗАЦИЯ СКОРОСТИ</div>
+                        <div class="Admin-menu">ПЕРЕЕЗД НА HTTPS</div>
+                    </div>
+                </div>
+                <div id="Prodvig">
+                    ПРОДВИЖЕНИЕ
+                </div>
+                <div id="Advertise">
+                    РЕКЛАМА
+                </div>
+                <div id="About" style="position: relative;">
+                    О НАС <img src="img/angle-small-down.svg" alt="angle-small-down" style="width: 15px">
+                    <div id="About-menu">
+                      <div class="About-menu">КОМАНДА</div>
+                      <div class="About-menu">DRUPALGIVE</div>
+                      <div class="About-menu">БЛОГ</div>
+                      <div class="About-menu">КУРСЫ DRUPAL</div>
+                    </div>
+                </div>
+                <div id="Projects">
+                    ПРОЕКТЫ
+                </div>
+                <div id="Contacts">
+                    КОНТАКТЫ
+                </div>
+                
+            </div>
+            <div class="menu_2">
+                <div class="menu_info">
+                    <h1 style="font-size: 6vh;">Поддержка<br> сайтов на Drupal</h1>
+                    <p style="color: rgb(189, 192, 185);">Сопровождение и поддержка сайтов<br> на CMS Drupal любых версий и запущенности</p>
+                    <div id="tarif">ТАРИФЫ</div>
+                </div>
+                <div class="exp_menu">
+                    <div style="display: flex;">
+                        <div class="exp" id="exp_1"><h1 style="font-size: 55px;">#1<img style="width: 75px;" src="img/cup.png" alt="cup"></h1> <span style="color: rgb(189, 192, 185);">Drupal-разработчик в России по версии Рейтинга Рунета</span></div>
+                        <div class="exp" id="exp_2"><h1>3+</h1> <span style="color: rgb(189, 192, 185);">средний опыт специалистов более 3 лет</span></div>
+                        <div class="exp" id="exp_3"><h1>14</h1> <span style="color: rgb(189, 192, 185);">лет опыта в сфере Drupal</span></div>
+                    </div>
+                    <div style="display: flex;">  
+                        <div class="exp" id="exp_4"><h1>50+</h1> <span style="color: rgb(189, 192, 185);">модулей и тем в формате DrupalGive</span></div>
+                        <div class="exp" id="exp_5"><h1>90 000+</h1> <span style="color: rgb(189, 192, 185);">часов поддержки сайтов на Drupal</span></div>
+                        <div class="exp" id="exp_6"><h1>300+</h1> <span style="color: rgb(189, 192, 185);">Проектов на поддержке</span></div>
+                    </div>      
+                </div>
+                <div class="exp_menu_mobile">
+                  <div style="display: flex;">
+                      <div class="exp" id="exp_1_m"><h1 style="font-size: 55px;">#1<img style="width: 75px;" src="img/cup.png" alt="cup"></h1> <span style="color: rgb(189, 192, 185);">Drupal-разработчик в России по версии Рейтинга Рунета</span></div>
+                      <div class="exp" id="exp_2_m"><h1>3+</h1> <span style="color: rgb(189, 192, 185);">средний опыт специалистов более 3 лет</span></div>
+                  </div>
+                  <div style="display: flex;">
+                    <div class="exp" id="exp_3_m"><h1>14</h1> <span style="color: rgb(189, 192, 185);">лет опыта в сфере Drupal</span></div>
+                    <div class="exp" id="exp_4_m"><h1>50+</h1> <span style="color: rgb(189, 192, 185);">модулей и тем в формате DrupalGive</span></div>
+                  </div>
+                  <div style="display: flex;">  
+                      <div class="exp" id="exp_5_m"><h1>90 000+</h1> <span style="color: rgb(189, 192, 185);">часов поддержки сайтов на Drupal</span></div>
+                      <div class="exp" id="exp_6_m"><h1>300+</h1> <span style="color: rgb(189, 192, 185);">Проектов на поддержке</span></div>
+                  </div>      
+              </div>
+            </div>    
+		</div>
+	    <video autoplay="" loop="" muted="" class="fullscreen-bg__video"> 
+	        <source src="img/video.mp4" type="video/mp4">
+	    </video>
+	</header>
+
+    <div class="competency">
+        <div class="content_wid">
+            <div class="text-com">
+              <h1 id="h1_com" style="color: rgb(4,12,55);" >
+                  13 лет совершенствуем компетенции в Друпал поддержке!
+              </h1>
+              <p id="p_new">Разрабатываем и оптимизируем модули, расширяем функциональность сайтов, обновляем дизайн</p>
+            </div>
+            <div class="com">
+                <div style="display: flex;">
+                    <div class="competency_img"><img src="img/competency-1.svg" alt="competency-1"><p>Добавление информации на сайт, создание новых разделов</p></div>
+                    <div class="competency_img"><img src="img/competency-2.svg" alt="competency-2"><p>Разработка и оптимизация модулей сайта</p></div>
+                    <div class="competency_img"><img src="img/competency-3.svg" alt="competency-3"><p>Интеграция с CRM, 1C, платежными системами, любыми веб-сервисами</p></div>
+                    <div class="competency_img"><img src="img/competency-4.svg" alt="competency-4"><p>Любые доработки функционала и дизайна</p></div>
+                </div>
+                <div style="display: flex;">
+                    <div class="competency_img"><img src="img/competency-5.svg" alt="competency-5"><p>Аудит и мониторинг безопасности Drupal сайтов</p></div>
+                    <div class="competency_img"><img src="img/competency-6.svg" alt="competency-6"><p>Миграция, импорт контента и апгрейд Drupal</p></div>
+                    <div class="competency_img"><img src="img/competency-7.svg" alt="competency-7"><p>Оптимизация и ускорение Drupal-сайтов</p></div>
+                    <div class="competency_img"><img src="img/competency-8.svg" alt="competency-8"><p>Веб-маркетинг, консультации и работы по SEO</p></div>
+                </div>
+            </div>
+            <div class="com-mobile">
+              <div style="display: flex;">
+                  <div class="competency_img"><img src="img/competency-1.svg" alt="competency-1"><p>Добавление информации на сайт, создание новых разделов</p></div>
+                  <div class="competency_img"><img src="img/competency-2.svg" alt="competency-2"><p>Разработка и оптимизация модулей сайта</p></div>
+              </div>
+              <div style="display: flex;">
+                  <div class="competency_img"><img src="img/competency-3.svg" alt="competency-3"><p>Интеграция с CRM, 1C, платежными системами, любыми веб-сервисами</p></div>
+                  <div class="competency_img"><img src="img/competency-4.svg" alt="competency-4"><p>Любые доработки функционала и дизайна</p></div>
+              </div>
+              <div style="display: flex;">
+                  <div class="competency_img"><img src="img/competency-5.svg" alt="competency-5"><p>Аудит и мониторинг безопасности Drupal сайтов</p></div>
+                  <div class="competency_img"><img src="img/competency-6.svg" alt="competency-6"><p>Миграция, импорт контента и апгрейд Drupal</p></div>
+              </div>
+              <div style="display: flex;">
+                  <div class="competency_img"><img src="img/competency-7.svg" alt="competency-7"><p>Оптимизация и ускорение Drupal-сайтов</p></div>
+                  <div class="competency_img"><img src="img/competency-8.svg" alt="competency-8"><p>Веб-маркетинг, консультации и работы по SEO</p></div>
+              </div>
+          </div>
+        </div>
+  </div>
 </body>
