--- a/index.html
+++ b/index.html
@@ -679,4 +679,20 @@
         </div>
     </div>
 
+    <div id="Razrab">
+        <h1>Наши профессиональные разработчики<br>
+            выполняют быстро Любые задачи</h1>
+        <div id="Quality"> 
+            <div class="Quality_elem">
+                <div style="background: url(img/icon20.svg)no-repeat left;">
+                    <img src="img/competency-20.svg" alt="1" style="padding-left: 45px;">
+                </div>
+                <div>
+                    <p style="font-size: 23px; margin-left: 45px; margin-bottom: 0px; margin-top: 5px;"><b>от 1ч</b></p>
+                    <p class="raz_text">
+                        Настройка события GA<br>
+                        в интернет-магазине</p>
+                </div>
+            </div>
+
 </body>
