--- a/index.html
+++ b/index.html
@@ -694,5 +694,30 @@
                         в интернет-магазине</p>
                 </div>
             </div>
+            <div class="Quality_elem" id="padding_elem_1"> <!--Второй div-->
+                <div style="background: url(img/icon20.svg)no-repeat left;">
+                    <img src="img/competency-21.svg" alt="1" style="padding-left: 45px;">
+                </div>
+                <div>
+                    <p style="font-size: 23px; margin-left: 45px; margin-bottom: 0px; margin-top: 5px;"><b>от 20ч</b>
+                    </p>
+                    <p class="raz_text">
+                        Разработка мобильной<br>
+                        версии сайта</p>
+                </div>
+            </div>
+            <div class="Quality_elem" id="padding_elem_2"> <!--Третий div-->
+                <div style="background: url(img/icon20.svg)no-repeat left;">
+                    <img src="img/competency-20.svg" alt="1" style="padding-left: 45px;">
+                </div>
+                <div>
+                    <p style="font-size: 23px; margin-left: 45px; margin-bottom: 0px; margin-top: 5px;"><b>от 8ч</b></p>
+                    <p class="raz_text">
+                        Интеграция<br>
+                        модуля оплаты</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
