new html block&css

--- a/index.html
+++ b/index.html
@@ -720,4 +720,58 @@
         </div>
     </div>
 
+    <div id="Team"> 
+        <h1 style="text-align: center;">Команда</h1>
+        <div id="Team_flex" style="margin: auto;">
+            <div class="Team_elem"> 
+                <div style="margin: auto;">
+                    <img src="img/IMG_2472_0.jpg" alt="Сергей Синица">
+                    <p style="text-align: left;"><b class="name_razrab">Сергей Синица</b><br><br>
+                        Руководитель отдела веб-<br class="br_team_2">
+                        разработки, канд. техн. наук,<br class="br_team_2">
+                        заместитель директора</p>
+                </div>
+
+            </div>
+            <div class="Team_elem">
+                <div style="margin: auto;">
+                    <img src="img/IMG_2539_0.jpg" alt="Роман Агабеков">
+                    <p style="text-align: left;"><b class="name_razrab">Роман Агабеков</b><br><br>
+                        Руководитель отдела DevOPS,<br class="br_team_2">
+                        директор</p>
+                </div>
+            </div>
+            <div class="Team_elem"> 
+                <div style="margin: auto;">
+                    <img src="img/IMG_2474_1.jpg" alt="Аексей Синица">
+                    <p style="text-align: left;"><b class="name_razrab">Аексей Синица</b><br><br>
+                        Руководитель отдела<br class="br_team_2">
+                        поддержки сайтов</p>
+                </div>
+            </div>
+            <div class="Team_elem"> 
+                <div style="margin: auto;">
+                    <img src="img/IMG_2522_0.jpg" alt="Дарья Бочкарёва">
+                    <p style="text-align: left;"><b class="name_razrab">Дарья Бочкарёва</b><br><br>
+                        Руководитель отдела<br class="br_team_2">
+                        продвижения, контекстной<br class="br_team_2">
+                        рекламы и контент-поддержки<br class="br_team_2">
+                        сайтов</p>
+                </div>
+            </div>
+            <div class="Team_elem"> 
+                <div style="margin: auto;">
+                    <img src="img/IMG_9971_16.jpg" alt="Ирина Торкунова">
+                    <p style="text-align: left;"><b class="name_razrab">Ирина Торкунова</b><br><br>
+                        Менеджер по работе с<br class="br_team_2">
+                        клиентами</p>
+                </div>
+            </div>
+        </div>
+        <div style="display: flex; justify-content: center;">
+       
+            <button style="background-color: white; border: 1px solid rgb(145, 145, 145);">ВСЯ КОМАНДА</button>
+        </div>
+    </div>
+
 </body>
