--- a/index.html
+++ b/index.html
@@ -774,4 +774,48 @@
         </div>
     </div>
 
+    <div id="Case"> <!--Этот div содержит в себе раздел с публикациями-->
+        <h1>Последние кейсы</h1>
+        <div id="Case_one"> <!--Верхний ряд-->
+            <div id="Case_one_1">
+                <img style="width: 100%; border-radius: 5px;" src="img/1.png" alt="Ноутбук">
+                <div style="text-align: left;">
+                    <b>Настройки кеширования<br class="br_1">
+                        данных.<br class="br_2"> Апгрейд сервера.<br class="br_1">
+                        Ускорение работы сайта в<br class="br_1">
+                        30 раз! <br class="br_1"><br class="br_2"></b>
+                    <span style="font-size: 10px;">04.05.2020</span>
+                    <p style="font-size: 11px;">
+                        Влияние скорости загрузки страницы <br class="br_1">
+                        сайта на отказы и конверсии. Кейс <br class="br_1">
+                        ускорения...</p>
+                </div>
+            </div>
+            <div id="Case_one_2">
+                <img style="border-radius: 7px;" src="img/2.png" alt="Ноутбук">
+            </div>
+        </div>
+        <div id="Case_two"> <!--Нжниий ряд-->
+            <div id="Case_two_1">
+                <img style="border-radius: 5px;" src="img/3.png" alt="2_1">
+            </div>
+            <div id="Case_two_2">
+                <img style="border-radius: 5px;" src="img/4.png" alt="2_1">
+            </div>
+            <div id="Case_two_3">
+                <img style="border-radius: 5px;" src="img/5.png" alt="Ноутбук">
+                <div style="text-align: left;">
+                    <b>
+                        Обмен товарами и заказами<br class="br_1">
+                        интернет-магазинов на<br class="br_1">
+                        Drupal 7 с 1С: Предприятие,<br class="br_1">
+                        Мой склад, Класс365<br class="br_1"><br class="br_2"></b>
+                    <span style="font-size: 10px;">22.08.2019</span>
+                    <p style="font-size: 11px;">
+                        Опубликован релиз модуля...</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
