--- a/index.html
+++ b/index.html
@@ -774,9 +774,9 @@
         </div>
     </div>
 
-    <div id="Case"> <!--Этот div содержит в себе раздел с публикациями-->
+    <div id="Case"> 
         <h1>Последние кейсы</h1>
-        <div id="Case_one"> <!--Верхний ряд-->
+        <div id="Case_one"> 
             <div id="Case_one_1">
                 <img style="width: 100%; border-radius: 5px;" src="img/1.png" alt="Ноутбук">
                 <div style="text-align: left;">
@@ -795,7 +795,7 @@
                 <img style="border-radius: 7px;" src="img/2.png" alt="Ноутбук">
             </div>
         </div>
-        <div id="Case_two"> <!--Нжниий ряд-->
+        <div id="Case_two"> 
             <div id="Case_two_1">
                 <img style="border-radius: 5px;" src="img/3.png" alt="2_1">
             </div>
@@ -813,6 +813,60 @@
                     <span style="font-size: 10px;">22.08.2019</span>
                     <p style="font-size: 11px;">
                         Опубликован релиз модуля...</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="Reviews"> 
+        <div id="_3">
+            <h1>Отзывы</h1>
+        </div>
+        <div id="Com_1">
+            <div id="slider_three"> 
+                <div style="color: black; text-align: left;">
+                    <img src="img/logo_0.png" alt="Отзыв"> 
+                    <br><b>Долгие поиски единственного и неповторимого мастера на<br> 
+                        многострадальный сайт www.cielparfum.com, который был<br>
+                        собран крайне некомпетентным программистом и раз в<br>
+                        месяц стабильно грозил погибнуть, привели меня на сайт<br>
+                        и, в итоге, к ребятам из Drupal-coder. И вот уже<br>
+                        практически полгода как не проходит и дня, чтобы я не<br>
+                        поудивлялась и не порадовалась своему везению!<br>
+                        Починили все, что не работало - от поиска до отображения<br>
+                        меню. Провели редизайн - не отходя от желаемого, но со<br>
+                        своими существенными и качественными дополнениями.<br>
+                        Осуществили ряд проектов - конкурсы, тесты и тд. А уж<br>
+                        мелких починок и доработок - не счесть. И главное - все<br>
+                        качественно и быстро (не взирая на не самый "быстрый"<br>
+                        тариф). Есть вопросы - замечательный Алексей всегда<br>
+                        подскажет, поддержит, отремонтирует и/или просто<br>
+                        сделает с нуля. Есть задумка для реализации -<br>
+                        замечательный Сергей обсудит и предложит идеальный<br>
+                        вариант. Есть проблема - замечательные Надежда и Роман<br>
+                        починят, поправят, сделают! Ребята доказали, что эта CMS -<br>
+                        мощная и грамотная система управления. Надеюсь, что<br>
+                        наше сотрудничество затянется надолго! Спасибо!</b>
+                    <p style="color: rgb(121,135,146);">C уважением, Наталья Сушкова руководитель Отдела веб-<br>
+                        проектов Группы компании "Си Эль<br>парфюм" <ins
+                            style="color: black;"><b>http://www.cielparfum.com/</b></ins></p>
+                </div>
+                <div></div> 
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div id="Prev_Next" style="background: rgb(255,255,255);">
+                <div>
+                    <button style="vertical-align: middle; background-color: rgb(255,255,255);" id="prev"><img
+                            src="img/arrow-left.svg" alt="prev"></button> 
+                    <span id="numb" style="font-size: 28px; color:black; vertical-align: middle;">01 </span>
+                    <span style="font-size: 28px; color: rgb(121, 135,146); vertical-align:middle;">/ 08</span>
+                    <button style="vertical-align: middle; background-color: rgb(255,255,255);" id="next"><img
+                            src="img/arrow-right.svg" alt="next"></button> 
                 </div>
             </div>
         </div>
