Fix grammar mistakes

--- a/index.html
+++ b/index.html
@@ -672,8 +672,8 @@
             </div>
             <div class="Team_elem"> 
                 <div style="margin: auto;">
-                    <img src="img/IMG_2474_1.jpg" alt="Аексей Синица">
-                    <p style="text-align: left;"><b class="name_razrab">Аексей Синица</b><br><br>
+                    <img src="img/IMG_2474_1.jpg" alt="Алексей Синица">
+                    <p style="text-align: left;"><b class="name_razrab">Алексей Синица</b><br><br>
                         Руководитель отдела<br class="br_team_2">
                         поддержки сайтов</p>
                 </div>
@@ -836,9 +836,7 @@
             <li id="one" style="cursor: default;">
                 <details>
                     <summary id="faq_id"><b>Кто непосредственно занимается поддержкой?</b></summary>
-                    
                     <p>Сайты поддерживают штатные сотрудники ООО "Инитлаб", г.Крансодар, прошедшие
-                    
                         специальное обучение и имеющие опыт работы с Друпал от4 до 15 лет: 8 web-разработчиков, 2
                         специалиста по SEO,
                         4 системных администратора.
